developer/19.0/reference/messages/developer-utils.developerutilsmessages.md
---
title: Compiler Messages Reference for @keymanapp/developer-utils
---

 Code | Identifier | Message
------|------------|---------
[KM01001](km01001) | `ERROR_SchemaValidationError` | Error validating LDML XML file: &lt;param&gt;: &lt;param&gt;: &lt;param&gt; &lt;param&gt;
[KM01002](km01002) | `ERROR_ImportInvalidBase` | Import element with base &lt;param&gt; is unsupported\. Only cldr or empty \(for local\) are supported\.
[KM01003](km01003) | `ERROR_ImportInvalidPath` | Import element with invalid path &lt;param&gt;: expected the form '46/\*\.xml'
[KM01004](km01004) | `ERROR_ImportReadFail` | Import could not read data with path &lt;param&gt;
[KM01005](km01005) | `ERROR_ImportWrongRoot` | Invalid import file &lt;param&gt;: expected &lt;param&gt; as root element\.
[KM01006](km01006) | `ERROR_ImportMergeFail` | Problem importing &lt;param&gt;: not sure how to handle non\-array &lt;param&gt;\.&lt;param&gt;
[KM01007](km01007) | `ERROR_TestDataUnexpectedArray` | Problem reading test data: expected single &lt;param&gt; element, found multiple
[KM01008](km01008) | `ERROR_InvalidXml` | The XML file could not be read: 
[KM01009](km01009) | `ERROR_InvalidPackageFile` | Package source file is invalid: unknown error
[KM0100A](km0100a) | `ERROR_InvalidProjectFile` | Project file is not valid: &lt;param&gt;
[KM0100B](km0100b) | `ERROR_UnsupportedProjectVersion` | Project version &lt;param&gt; is not supported by this version of Keyman Developer\.
[KM0100C](km0100c) | `ERROR_ProjectFileCouldNotBeRead` | Project file could not be read
